--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       In addition, we changed our initial neural network, which only has a few parameters and is too simple to be expressive enough, to ResNet architecture. 
     </p>
     <p>
-      <div class="container"><img src="triplet.jpg"><p>Network architecture and triplet loss function</p></div>      
+      <div class="container"><img src="./results/triplet.jpg"><p>Network architecture and triplet loss function</p></div>      
     </p>
 		<h3>Improvements to train more effectively: </h3>
     <p> 
