--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </p>
     <p>The picture below is a simple illustration of the triplet loss function that we used to train the neural network. A is an anchor input, P is a positive input 
       of the same class as A (photo of the same person), and N is a negative input of a different class from A (photo of another person). By minimizing the loss function, 
-      we can make the disimilarity (Euclidean distance) between A and P (photos of the same person) be less than the disimilarity between A and N (photos of different person), 
+      we can make the dissimilarity (Euclidean distance) between A and P (photos of the same person) be less than the dissimilarity between A and N (photos of different person), 
       which is the goal of our face recognition algorithm. 
     </p>
     <p>
